# kairos-framework

./: README.md
bezalel/: Cargo.toml
bezalel/src/: build.rs  config.rs  github.rs  icons.rs  lib.rs  main.rs  svg.rs  workflow.rs
kairos/: Cargo.toml
kairos-macros/: Cargo.toml
kairos-macros/src/: lib.rs
kairos-macros/src/generate/: impl_methods.rs  mod.rs  output.rs
kairos-macros/src/generate/arms/: fields.rs  icon.rs  label.rs  mod.rs  nested.rs  padding.rs  push.rs  registry.rs  source.rs
kairos-macros/src/registry/: mod.rs
kairos-macros/src/registry/mantle/: animation.rs  border.rs  color.rs  icons.rs  line.rs  mod.rs  sizing.rs  typography.rs  visual.rs
kairos-macros/src/registry/petra/: helpers.rs  mod.rs  primitives.rs
kairos/src/: helpers.rs  lib.rs  macros.rs  runtime.rs  theme.rs
kairos/src/conversion/: avatar.rs  button.rs  canvas.rs  checkbox.rs  clickable.rs  column.rs  divider.rs  dropdown.rs  graph.rs  icon.rs  image.rs  mod.rs  positioned.rs  progress_bar.rs  radio.rs  row.rs  scrollable.rs  scrubber.rs  slider.rs  spacer.rs  stack.rs  style.rs  text.rs  text_input.rs  toggle.rs
kairos/src/conversion/spinner/: mod.rs  shapes.rs
kairos/src/conversion/spinner/animations/: bounce.rs  chase.rs  comet.rs  grow.rs  mod.rs  morph.rs  orbit.rs  pulse.rs  ring.rs  ripple.rs  spin.rs  wave.rs
kairos/src/rendering/: build.rs  mod.rs
mantle/: Cargo.toml
mantle/src/: animation.rs  border.rs  color.rs  icons.rs  lib.rs  line.rs  loader.rs  palette.rs  scrollbar.rs  shape.rs  sizing.rs  source.rs  typography.rs  visual.rs
mantle/src/types/: defaults.rs  mod.rs  theme.rs
nuntius/: Cargo.toml
nuntius/src/: broker.rs  buffer.rs  lib.rs  signal.rs
petra/: Cargo.toml
petra/src/: lib.rs
petra/src/composites/: avatar.rs  dropdown.rs  mod.rs  progress_bar.rs  switcher.rs
petra/src/helpers/: clickable.rs  color.rs  mod.rs  scrollable.rs  styles.rs
petra/src/primitives/: button.rs  canvas.rs  checkbox.rs  column.rs  divider.rs  graph.rs  icon.rs  image.rs  input_event.rs  mod.rs  overlay.rs  padding.rs  positioned.rs  radio.rs  row.rs  scrollable.rs  scrubber.rs  slider.rs  spacer.rs  spinner.rs  stack.rs  text.rs  text_input.rs  toast.rs  toggle.rs  types.rs  video.rs  widget.rs  window.rs
