[package]
name = "bezalel"
version = "0.1.4"
edition = "2024"
description = "Cross-platform build orchestrator for kairos-ui applications"
license = "MIT"

[dependencies]
resvg = "0.44"
tiny-skia = "0.11"
image = "0.25"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
zip = "0.6"

[target.'cfg(windows)'.dependencies]
winres = "0.1"

[[bin]]
name = "bezalel"
path = "src/main.rs"