[package]
license = "MIT"
name = "petra"
version = "0.0.1"
edition = "2021"
description = "A component primitive library for Rust. Clean, composable, easy to read and write."

[dependencies]
mantle = { path = "../mantle" }
kairos-macros = { path = "../kairos-macros" }
nuntius = { path = "../nuntius" }
serde = { version = "1.0.228", features = ["derive"] }
