[package]
license = "MIT"
name = "petra"
version = "0.0.1"
edition = "2021"
description = "A component primitive library for Rust. Clean, composable, easy to read and write."

[dependencies]
mantle = { package = "kairos-mantle", version = "0.1.0", path = "../mantle" }
kairos-macros = { path = "../kairos-macros", version = "0.1.0" }
nuntius = { path = "../nuntius", version = "0.0.1" }
serde = { version = "1.0.228", features = ["derive"] }
